...
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" rowHeight="64" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wx0-zQ-9GO">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                <color key="backgroundColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <color key="separatorColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ResultsTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="6Zv-NV-0lj" id="95u-fl-MgQ"/>
                                    <outlet property="delegate" destination="6Zv-NV-0lj" id="4yt-KA-EcB"/>
                                </connections>
                            </tableView>
...
                                    <constraint firstItem="sSu-LY-jmu" firstAttribute="centerY" secondItem="Rdg-g8-8F9" secondAttribute="centerY" id="DuD-s2-zKh"/>
                                    <constraint firstItem="sSu-LY-jmu" firstAttribute="centerX" secondItem="Rdg-g8-8F9" secondAttribute="centerX" id="Ut4-By-Yfi"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="SearchScreenView"/>
                        <constraints>
                            <constraint firstItem="Rdg-g8-8F9" firstAttribute="trailing" secondItem="gIJ-uI-802" secondAttribute="trailing" id="1L2-Wi-fqq"/>
                            <constraint firstItem="Rdg-g8-8F9" firstAttribute="top" secondItem="gIJ-uI-802" secondAttribute="top" id="35h-kr-Hrx"/>
                            <constraint firstItem="Rdg-g8-8F9" firstAttribute="leading" secondItem="gIJ-uI-802" secondAttribute="leading" id="Edd-XS-HW1"/>
                            <constraint firstAttribute="trailing" secondItem="Wx0-zQ-9GO" secondAttribute="trailing" id="doi-RA-Fes"/>
                            <constraint firstItem="Wx0-zQ-9GO" firstAttribute="leading" secondItem="AkM-Ov-KHV" secondAttribute="leading" id="fw4-Mk-z11"/>
...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <subviews>
                                <searchBar contentMode="redraw" barStyle="black" placeholder="Search artists" translatesAutoresizingMaskIntoConstraints="NO" id="Azc-aO-hoE">
                                    <rect key="frame" x="0.0" y="-13" width="180" height="56"/>
                                    <textInputTraits key="textInputTraits"/>
                                    <userDefinedRuntimeAttributes>
                                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="SearchBar"/>
                                    </userDefinedRuntimeAttributes>
                                    <connections>
                                        <outlet property="delegate" destination="6Zv-NV-0lj" id="qUF-Hd-zDx"/>
                                    </connections>
                                </searchBar>
                            </subviews>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Favorite Albums" id="vUI-1g-k9h">
                        <barButtonItem key="backBarButtonItem" title=" " id="mX0-Dn-rJR"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="abI-f2-zTE">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="searchButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="searchButtonPressed:" destination="jN8-8U-6EV" id="BHY-cj-VY4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
